--- a/templates/retour.html
+++ b/templates/retour.html
@@ -7,6 +7,7 @@
     <title>Flask</title>
 </head>
 <body>
+    <!-- Implémentation des variable créé dans main.py pour un rappel des données entrées dans le formulaire. -->
     <h1>Merci de nous avoir contacté</h1>
     <h1>Nous vous contacterons dans les plus bref delais</h1>
     <h2>Voici vos infos</h2>
@@ -16,7 +17,7 @@
     <p>Pays : {{ pays }}</p>
     <p>Message : {{ message }}</p>
     <p>Genre : {{ genre }}</p>
-    <p>Sujet : {% for sujet in sujets %}{{ sujet }}{% endfor %}</p>
+    <p>Sujet : {% for sujet in sujets %}{{ sujet }}{% endfor %}</p>  <!-- C'est un moyen de "codé" en python dans html -->
 </body>
 
 </html>
